# CIS_25

./: .gitignore  README.md
.github/workflows/: ci.yml
Assignments/Currency Conversion System/Currency Conversion System/: README.md  main.cpp
Assignments/Manipulating Console Output/Manipulating Console Output/: README.md  main.cpp
Class_activities/Variable_swapper/Variable_swapper/: main.cpp
Class_activities/Variable_swapper/Variable_swapper.xcodeproj/: project.pbxproj
Class_activities/class_activity_01/Variable_swapper/Variable_swapper/: README.md
Class_activities/class_activity_01/Variables_swapper/Variables_swapper/: README.md
Class_activities/class_activity_01/Variables_swapper/Variables_swapper.xcodeproj/: project.pbxproj
Class_activities/class_activity_02/Card Dealer/Card Dealer/: README.md  main.cpp
Class_activities/class_activity_02/Card Dealer/Card Dealer.xcodeproj/: project.pbxproj
Class_activities/class_activity_03/Grade Evaluation System/Grade Evaluation System/: README.md  main.cpp
Class_activities/class_activity_03/Grade Evaluation System/Grade Evaluation System.xcodeproj/: project.pbxproj
Class_activities/class_activity_04/Age Group Classifier/Age Group Classifier/: README.md  main.cpp
Class_activities/class_activity_04/Age Group Classifier/Age Group Classifier.xcodeproj/: project.pbxproj
Class_activities/class_activity_05/Simple Calculator/Simple Calculator/: README.md  main.cpp
Class_activities/class_activity_05/Simple Calculator/Simple Calculator.xcodeproj/: project.pbxproj
Class_activities/class_activity_07/Leap Year Checker/Leap Year Checker/: README.md  main.cpp
Class_activities/class_activity_07/Leap Year Checker/Leap Year Checker.xcodeproj/: project.pbxproj
Class_activities/class_activity_08/customer_struct/: README.md
Class_activities/class_activity_09/Movie_Obj_With_Overloaded_Operator/: README.md
HealthAndFitnessTracker/HealthAndFitnessTracker/: CMakeLists.txt  README.md  main.cpp
HealthAndFitnessTracker/HealthAndFitnessTracker/include/: fitnessManager.h  getUserInfo.h  inputValidation.h  mealManager.h  menu.h  user.h
HealthAndFitnessTracker/HealthAndFitnessTracker/src/: fitnessManager.cpp  getUserInfo.cpp  inputValidation.cpp  input_validation.cpp  mealManager.cpp  menu.cpp  user.cpp
HealthAndFitnessTracker/HealthAndFitnessTracker/test/: additional_test.cpp  codeReview.md  test_tracker.cpp
My_Projects/AirlineSeatManager/AirlineSeatManager/: main.cpp
My_Projects/Fitness_Tracker(OOP ver)/Fitness_Tracker(OOP ver)/: CMakeLists.txt  README.md  main.cpp
My_Projects/Fitness_Tracker(OOP ver)/Fitness_Tracker(OOP ver)/include/: entry.h  enum.h  fitnessTracker.h  meal.h  user.h  workout.h
My_Projects/Fitness_Tracker(OOP ver)/Fitness_Tracker(OOP ver)/src/: entry.cpp  fitnessTracker.cpp  meal.cpp  user.cpp  workout.cpp
My_Projects/Fitness_Tracker(OOP ver)/Fitness_Tracker(OOP ver)/test/: userInputsTest.cpp
My_Projects/Fitness_Tracker(OOP ver)/Fitness_Tracker(OOP ver)/utils/: validInput.cpp  validInput.hpp
My_Projects/Flight Seat Booking System/Flight Seat Booking System/: CMakeLists.txt  README.md  main.cpp  seats.txt
My_Projects/Flight_Booking_System (OOP_Ver)/Flight_Booking_System (OOP_Ver)/: CMakeLists.txt  README.md  main.cpp  seats.txt
My_Projects/Flight_Booking_System (OOP_Ver)/Flight_Booking_System (OOP_Ver)/include/: flightBookingSystem.h  passenger.hpp  seat.hpp  validateUserInputs.hpp
My_Projects/Flight_Booking_System (OOP_Ver)/Flight_Booking_System (OOP_Ver)/src/: flightBookingSystem.cpp  passenger.cpp  seat.cpp  validateUserInputs.cpp
My_Projects/Health and Fitness Tracker/: README.md
My_Projects/Health and Fitness Tracker/Health and Fitness Tracker/: addMeal.cpp  addMeal.hpp  addWorkout.cpp  addWorkout.hpp  calculateBMR.cpp  calculateBMR.hpp  calculateDailyCalorie.cpp  calculateDailyCalorie.hpp  displayMainMenu.cpp  displayMainMenu.hpp  exitProgram.cpp  exitProgram.hpp  getMenuOption.cpp  getMenuOption.hpp  getUserInfo.cpp  getUserInfo.hpp  getValidActiveLevel.cpp  getValidActiveLevel.hpp  getValidAge.cpp  getValidAge.hpp  getValidCurrWeight.cpp  getValidCurrWeight.hpp  getValidGender.cpp  getValidGender.hpp  getValidGoal.cpp  getValidGoal.hpp  getValidGoalWeight.cpp  getValidGoalWeight.hpp  getValidHeight.cpp  getValidHeight.hpp  getValidName.cpp  getValidName.hpp  main.cpp  removeMeals.cpp  removeMeals.hpp  removeWorkouts.cpp  removeWorkouts.hpp  trackMeals.cpp  trackMeals.hpp  trackWorkouts.cpp  (+3 more)
My_Projects/Health and Fitness Tracker/Health and Fitness Tracker.xcodeproj/: project.pbxproj
My_Projects/mygrep/mygrep/: README.md  grep.cpp  grep.hpp  logs.txt  main.cpp
class_activity_01/Variables_swapper/Variables_swapper/: main.cpp
(+96 files in other folders)
